@@ -47,8 +47,8 @@ Depends: ${misc:Depends},
 Recommends: sidux-art-wallpaper-@CODENAME_SAFE@,
  dmz-cursor-theme
 Description: KDE theme for sidux @VERSION@ release
- Virtual package providing ksplash, kdm and KDE themes
- for sidux @VERSION@ (@CODENAME@) release
+ metapackage providing ksplash, kdm and KDE themes for the
+ sidux @VERSION@ (@CODENAME@) release
 
 Package: sidux-art-xfce-@CODENAME_SAFE@
 Architecture: all
@@ -59,6 +59,6 @@ Depends: ${misc:Depends},
 Recommends: sidux-art-wallpaper-@CODENAME_SAFE@,
  dmz-cursor-theme
 Description: Xfce theme for sidux @VERSION@ release
- Virtual package providing Xfce-splash and gdm themes
- for sidux @VERSION@ (@CODENAME@) release
+ metapackage providing Xfce-splash and gdm themes for
+ sidux @VERSION@ (@CODENAME@) release
 
